# InterviewAce

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GETTING_STARTED.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
Docs/: API_FLOW.md  API_REFERENCE.md  APP_EVALUATION.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  FRONTEND_ARCHITECTURE.md  FRONTEND_PLANNER.md  FRONTEND_STACK_DECISION.md  GIT_BRANCHING_STRATEGY.md  PRODUCTION_READINESS.md  PROJECT_OVERVIEW.md  Planner.md  README.md  UPGRADES.md
backend/: .dockerignore  Dockerfile  alembic.ini  main.py  requirements.txt
backend/Docs/: ARCHITECTURE.md
backend/alembic/: env.py
backend/alembic/versions/: 3e9293bf6fb6_initial_schema.py  a1b2c3d4e5f6_add_user_role_column.py  b2c3d4e5f6a7_fix_timestamp_timezone.py  c3d4e5f6a7b8_add_interview_config_and_indexes.py
backend/app/api/: deps.py  health.py
backend/app/core/: config.py  exceptions.py  logging_config.py  middleware.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/domain/: exceptions.py
backend/app/models/: base.py  interview.py  resume.py  security.py  user.py
backend/app/schemas/: auth.py  base.py  interview.py  resume.py  security.py  user.py
backend/app/services/: ai_analyzer.py  auth_service.py  interview_orchestrator.py  resume_exporter.py  resume_parser.py
backend/app/utils/: email_service.py  (+4 more)
backend/tests/: conftest.py
backend_v1/: main.py
backend_v2/: main.py
backend_v2/alembic/: env.py
frontend/: .dockerignore  .env.example  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/e2e/: auth.spec.ts  interview.spec.ts  resume.spec.ts
frontend/src/: middleware.ts
(+288 files in other folders)
